--- a/FINAL PROJECT/Dockerfile
+++ b/FINAL PROJECT/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9
 WORKDIR /app
-COPY . /app
+COPY "FINAL PROJECT" /app
 RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
 CMD ["python", "code_projet_final.py"]
